# AvitoTech-Internship-BackendTrainee-Assignment-Winter-2025

./: .golangci.yaml  Makefile  README.md  docker-compose-test.yml  docker-compose.yml
.github/workflows/: api-gateway.yml  auth-service.yml  ci.yml  coins-service.yml  info-service.yml  merch-service.yml  user-service.yml
configs/: envoy.yaml
configs/dev/: clickhouse-init.sql  create_databases.sql  redis.conf
deployments/k8s/: Chart.yaml  values.yaml
deployments/k8s/charts/api-gateway/: Chart.yaml
deployments/k8s/charts/auth-service/: Chart.yaml
deployments/k8s/charts/coins-service/: Chart.yaml
deployments/k8s/charts/info-service/: Chart.yaml
deployments/k8s/charts/merch-service/: Chart.yaml
deployments/k8s/charts/user-service/: Chart.yaml
deployments/k8s/infrastructure/: clickhouse.yaml  kafka.yaml  postgres.yaml  redis.yaml  zookeeper.yaml
deployments/k8s/infrastructure/storage/: clickhouse-pv.yaml  clickhouse-pvc.yaml  kafka-pv.yaml  kafka-pvc.yaml  postgres-pv.yaml  postgres-pvc.yaml  redis-pv.yaml  redis-pvc.yaml
proto/: coins.proto  merch.proto  user.proto
services/api-gateway/: Dockerfile  requirements.txt  tests.dockerfile
services/api-gateway/src/: main.py
services/api-gateway/src/core/: config.py  dependencies.py
services/api-gateway/src/routers/: info.py  (+4 more)
services/api-gateway/tests/: requirements.txt
services/auth-service/: .coveragerc  Dockerfile  Makefile  pyproject.toml  requirements.txt  tests.dockerfile
services/auth-service/migrations/: env.py
services/auth-service/migrations/versions/: 2025_02_13_1908-1cde7dfa8857_init.py
services/auth-service/src/: main.py
services/auth-service/src/core/: config.py
services/auth-service/src/database/: __init__.py  base.py  manager.py
services/auth-service/src/middlewares/: __init__.py  grpc_error.py  logging.py
services/auth-service/src/models/: __init__.py  session.py
services/auth-service/src/routers/: __init__.py  auth.py  health.py
services/auth-service/src/services/: auth.py  user.py
services/auth-service/src/utils/: converters.py  security.py
services/auth-service/tests/: conftest.py  mocks.py  requirements.txt
services/auth-service/tests/api/: conftest.py
services/auth-service/tests/api/auth/: test_auth.py  test_logout.py  test_refresh.py
services/auth-service/tests/api/health/: test_health_check.py  test_health_ping.py
services/auth-service/tests/migrations/: conftest.py  test_migrations_up_to_date.py  test_stairway.py  utils.py
services/coins-service/: .coveragerc  Dockerfile  README.md  requirements.txt  tests.dockerfile
services/coins-service/migrations/: env.py
services/coins-service/src/: main.py  servicer.py
services/coins-service/tests/: conftest.py  requirements.txt
services/info-service/: Dockerfile  README.md  go.mod  tests.dockerfile
services/info-service/cmd/: main.go
services/info-service/docs/: swagger.yaml
services/info-service/pkg/: server.go
services/merch-service/: Dockerfile  README.md  requirements.txt  tests.dockerfile
services/merch-service/migrations/: 001_create_merch_table.down.sql  001_create_merch_table.sql  002_create_index_on_merch_name.down.sql  002_create_index_on_merch_name.sql  env.py
services/merch-service/src/: main.py  servicer.py
services/merch-service/tests/: conftest.py  mocks.py
services/user-service/: Dockerfile  go.mod  go.sum  tests.dockerfile
services/user-service/cmd/: main.go
services/user-service/migrations/: 0001_init.up.sql  0003_add_inventory_table.up.sql
tests/e2e/: Makefile  README.md  pyproject.toml  requirements.txt
tests/e2e/tests/: conftest.py
tests/e2e/tests/clients/: __init__.py  api_gateway.py  auth.py
tests/e2e/tests/scenarios/: test_buying_merch.py  test_send_coins.py
tests/e2e/tests/utils/: accounts.py
tests/load-tests/: README.md  ammo.txt  load.yaml
(+88 files in other folders)
